hard-gists/6065887/run.log
=== Docker Run Log for 6065887 ===
Started at: Mi 29. Okt 16:18:51 CET 2025

[2025-10-29 16:18:51] START: Running container for 6065887
[2025-10-29 16:18:52] SUCCESS: Container a6da6b052478ad5a65d70178371608efe186a4e1ef2d8dbd4a02513ba2f120c2 started for 6065887
=== Container logs for 6065887 ===
  File "/snippet.py", line 20
    print "Neighbors: %d, Accuracy: %3f" % (n, accuracy)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6065887 ===
[2025-10-29 16:18:54] INFO: Container a6da6b052478ad5a65d70178371608efe186a4e1ef2d8dbd4a02513ba2f120c2 has stopped
